# spoor

./: .gitignore  BENCHMARKS.md  IMAGE-EXPORT.md  LICENSE  README.md  package.json  playwright.config.ts
.github/workflows/: build-windows.yml  build.yml  pages.yml
mockups/: idea-2c-states.html
scripts/: benchmark.py  convert.py  download_test_data.py  evaluate.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detect.rs  export.rs  main.rs
tests/: serve.ts  ui-controls.spec.ts  ui-layout.spec.ts  ui-post-inference.spec.ts
web/: app.js  desktop.css  desktop.html  export-worker.js  index.html  style.css  worker.js
web-v2/: app.js  index.html
