[package]
name = "spoor"
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
description = "Camera trap image detection with species identification"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = "2.0.0-rc.11"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
turbojpeg = "1"
ab_glyph = "0.2"
rayon = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
